<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/store_config_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/store_configuration"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/store_sitename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_config_title"
        android:layout_margin="15dp"
        android:focusable="true"
        android:hint="@string/store_sitename"
        android:inputType="numberSigned"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/store_storeid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_sitename"
        android:layout_margin="15dp"
        android:focusable="true"
        android:hint="@string/store_storeid"
        android:maxLength="4"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />


    <EditText
        android:id="@+id/actual_store_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_storeid"
        android:layout_margin="15dp"
        android:focusable="true"
        android:hint="@string/actual_store_name"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/store_snapshot_threshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actual_store_name"
        android:layout_margin="15dp"
        android:focusable="true"
        android:hint="@string/store_snapshot_threshold"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="5"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_snapshot_threshold"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/store_configuration_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbackground"
            android:focusable="true"
            android:paddingBottom="15dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="15dp"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>