<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/create_site_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/create_site"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/storename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_site_text"
        android:layout_margin="10dp"
        android:focusable="true"
        android:hint="@string/name_the_store"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/number_of_floors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storename"
        android:layout_margin="10dp"
        android:focusable="true"
        android:hint="@string/number_of_floors"
        android:inputType="number"
        android:maxLength="2"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray" />

    <Spinner
        android:id="@+id/storespinner"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/number_of_floors"
        android:layout_margin="15dp"
        android:entries="@array/shopperstop_store_list"
        android:focusable="true"
        android:visibility="invisible"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/mode_of_trainingtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storespinner"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/select_the_mode_of_traiining"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/mode_of_training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mode_of_trainingtv"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:weightSum="100">

        <RadioButton
            android:id="@+id/wifi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:checked="true"
            android:text="@string/wifi" />

        <RadioButton
            android:id="@+id/ble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/ble" />

    </RadioGroup>

    <TextView
        android:visibility="gone"
        android:id="@+id/siterssithreshfordetection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mode_of_training"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/site_rssi_thresh_for_detection"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:visibility="gone"
        android:id="@+id/siterssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/siterssithreshfordetection"
        android:layout_margin="10dp"
        android:focusable="true"
        android:hint="@string/site_rssi_thresh_for_detection"
        android:inputType="numberSigned"
        android:maxLength="4"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />


    <LinearLayout
        android:id="@+id/createsitelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/siterssi"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/createsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbackground"
            android:focusable="true"
            android:paddingBottom="15dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="15dp"
            android:text="@string/create_site"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>