<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/storage_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="achbclwedn"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />


    <RadioGroup
        android:id="@+id/storage_radiogrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storage_title_textview"
        android:layout_margin="20dp">


        <RadioButton
            android:id="@+id/internal_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/internal"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/external_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/external"
            android:textSize="20sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storage_radiogrp"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/storage_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <Button
            android:id="@+id/storage_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:background="@color/colorPrimary"
            android:text="@string/sure"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>